--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
 	<version>1.1.0-SNAPSHOT</version>
 	<name>forge.all</name>
 	<packaging>pom</packaging>
+
+        <properties>
+                <tycho.scmUrl>scm:git:git://github.com/jbosstools/jbosstools-forge</tycho.scmUrl>
+        </properties>
+
 	<modules>
 		<module>plugins</module>
 		<module>tests</module>
